# birdnet-stm32

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  TERMS_OF_USE.md  TERMS_OF_USE.txt  board_results.txt  config.example.json  config.toml.example  config_n6l.example.json  convert.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh  test.py  train.py
.github/: copilot-instructions.md
.github/instructions/: audio.instructions.md  models.instructions.md  tests.instructions.md
.github/workflows/: docs.yml  integration.yml  lint.yml  test.yml
birdnet_stm32/: __init__.py  __main__.py
birdnet_stm32/audio/: __init__.py  activity.py  augmentation.py  io.py  spectrogram.py
birdnet_stm32/cli/: __init__.py  board_test.py  convert.py  deploy.py  evaluate.py  train.py
birdnet_stm32/conversion/: __init__.py  quantize.py  validate.py
birdnet_stm32/data/: __init__.py  dataset.py  generator.py  species.py
birdnet_stm32/deploy/: __init__.py  board_test.py  config.py  stedgeai.py
birdnet_stm32/evaluation/: __init__.py  metrics.py  pooling.py  reporting.py
birdnet_stm32/models/: __init__.py  blocks.py  dscnn.py  frontend.py  magnitude.py  profiler.py  registry.py  runners.py
birdnet_stm32/training/: __init__.py  config.py  distillation.py  linear_probe.py  losses.py  lr_finder.py  qat.py  trainer.py  (+1 more)
checkpoints/: birdnet_stm32_tiny.h5  birdnet_stm32n6_100.keras  birdnet_stm32n6_100.tflite  birdnet_stm32n6_100_labels.txt  birdnet_stm32n6_100_model_config.json
dev/: todo.md
docs/: conversion.md  dataset.md  deployment.md  evaluation.md  gen_ref_pages.py  getting-started.md  index.md  training.md
firmware/: Makefile  README.md  STM32N657xx.ld  THIRD_PARTY_LICENSES.md  gen_app_config.py
scripts/: download_checkpoints.sh  download_data.sh  setup_stm32.sh
tests/: conftest.py  test_activity.py  test_audio_io.py  test_augmentation.py  test_config.py  test_conversion.py  test_data_pipeline.py  test_dataset.py  test_deploy_config.py  test_dscnn.py  test_eval_reports.py  test_focal_loss.py  test_frontend_layer.py  test_frontend_parity.py  test_frontend_registry.py  test_magnitude.py  test_metrics.py  test_optimizer.py  test_pooling.py  test_qat.py  test_quantization_sim.py  test_runners.py  test_spec_augment.py  test_spectrogram.py  test_threshold_opt.py  test_train_to_eval.py
utils/: audio.py
(+44 files in other folders)
