[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birdnet-stm32"
version = "0.3.0"
description = "Bird sound classification for edge deployment on STM32N6570-DK with NPU"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Stefan Kahl", email = "stefan.kahl@cornell.edu"},
]
keywords = ["bioacoustics", "bird", "audio", "classification", "stm32", "edge", "tflite", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "librosa>=0.11.0",
    "tensorflow[and-cuda]>=2.16.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "resampy>=0.4.3",
    "soundfile>=0.12.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]
deploy = [
    "pyserial>=3.5",
]

[project.scripts]
birdnet-stm32 = "birdnet_stm32.__main__:main"

[project.urls]
Homepage = "https://github.com/birdnet-team/birdnet-stm32"
Documentation = "https://birdnet-team.github.io/birdnet-stm32"
Repository = "https://github.com/birdnet-team/birdnet-stm32"
Issues = "https://github.com/birdnet-team/birdnet-stm32/issues"

[tool.setuptools.packages.find]
include = ["birdnet_stm32*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]  # imports after pytest.importorskip are expected

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
